Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Operating System: ReactOS
Platform: x86 Hardware
URL: http://msdn.microsoft.com/en-us/library/ff559183(v=vs.85).aspx
Description
VM: VMware Player 3.1.2 build-301548
tested ROS-Version: ReactOS 0.4-SVN (Build 20110220-r50832)
Problem: After installing the audio driver for VMware from rapps and restarting
I get always following BSOD:
---------------------------------------
CONFIG_LIST_FAILED
-
-
- STOP: 0x00000073 (0x0000000B,0xc0000022,0x00000002,0xF87A1BE8)
---------------------------------------
- STOP: 0x00000073 (0x0000000B,0xc0000022,0x00000002,0xF87A1BE8)
-
Bug Check 0x73: CONFIG_LIST_FAILED:
http://msdn.microsoft.com/en-us/library/ff559183(v=vs.85).aspx
dreimer added this audio driver in r50416 "Update rapps database and add
encoded's VMWare Sound driver."
I recommend to remove it from the rapps database or mark it as very
experimental, because if the user of the release (0.3.13) installs the driver -
he can never start his ReactOS installation again because of the BSOD.
Attachments
Issue Links
- is duplicated by
-
CORE-5527 BSOD during VMware startup with sound drivers
-
- Resolved
-