[NTOS:CM] - Do not allow the creation of keys in the master hive. Fixes boot with the VMware sound driver from rapps installed (and it works, too). CORE-5381 #resolve

svn path=/trunk/; revision=66905